# nexus-programming-language-

./: .gitignore  Cargo.toml  README.md  package.json
..devcontainer/: devcontainer.json
examples/: resnet_style.ai  simple_cnn.ai
src/: ast.rs  codegen.rs  lexer.rs  main.rs  parser.rs  repl.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/neurallang/: architecture.tsx  back-to-top.tsx  benchmarks.tsx  code-examples.tsx  code-highlighter.tsx  faq.tsx  features.tsx  footer.tsx  hero.tsx  installation.tsx  navbar.tsx  playground.tsx  repl.tsx  stats-counter.tsx
src/lib/neurallang/: codegen.ts  lexer.ts  parser.ts  transpiler.ts
system-commandline-sentinel-files/: dotnet-suggest-registration-GenerateBuildScript, Version=0.2.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a
